# scientists-toolbox

./: .gitignore  Cargo.toml  HexagonCalculations.ods  LICENSE  Makefile.toml  README.md  elm.json  index.html  manifest.json  package-lock.json  package.json  sw.ts  tailwind.config.js  workbox-config.js
.github/workflows/: build.yml  pull-request.yml  release-build.yml  release.yml
form_maker/: Cargo.toml
form_maker/form_maker_derive/: Cargo.toml
form_maker/form_maker_derive/src/: lib.rs
form_maker/src/: lib.rs
form_maker/tests/: 01_parse_struct.rs  form_maker_tests.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/thermo/: mod.rs  steam.rs  types.rs
src/: lib.rs
src/fluids/: mod.rs  orifice_plate.rs
src/numerical_methods/: mod.rs  root_finders.rs
src/thermo/: mod.rs  types.rs
src/thermo/steam/: iapws97.rs  iapws97_constants.rs  mod.rs  water_constants.rs
src/ui/: app.rs  js_bindings.rs  logo.rs  mod.rs  splash.rs
src/ui/assets/: svg.rs
src/ui/fluids/: mod.rs  orifice_plate_form.rs
src/ui/shared/: hooks.rs  mod.rs  modal.rs  search.rs  search_button.rs
src/ui/shared/forms/: base_input.rs  boxed_label.rs  calculation_button_section.rs  calculation_form.rs  calculation_section.rs  mod.rs  number_input.rs  number_output.rs  output_label.rs  select_input.rs  str_output.rs  unit_input.rs  unit_output.rs
src/ui/thermo/: mod.rs
src/ui/thermo/steam_table/: mod.rs  steam_table_form.rs
src/units/: mod.rs
www/: index.html  index.js
