[package]
name = "scientists_toolbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
wasm-bindgen = "0.2.80"
yew = "0.19.3"
yew-router = "0.16.0"
approx = "0.5.1"
assert_approx_eq = "1.1.0"
web-sys = "0.3.58"
wasm-logger = "0.2.0"
log = "0.4.6"
form_maker = { path = "./form_maker" }
form_maker_derive = { path = "./form_maker/form_maker_derive" }